Wonka DOCKER file

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,8 +8,9 @@ upstream Cocoa_server {
 
 server {
 
-    listen   8000;
-    server_name localhost;
+
+    listen   PORT_NAME;
+    server_name SERVER_NAME;
 
     client_max_body_size 4G;
 
